@@ -1,7 +1,4 @@
-# This Build.PL for App-PAIA was generated by Dist::Zilla::Plugin::ModuleBuildTiny 0.010.
-use strict;
-use warnings;
-
+# This Build.PL for App-PAIA was generated by Dist::Zilla::Plugin::ModuleBuildTiny 0.006.
 use v5.10.0;
 use Module::Build::Tiny 0.039;
 Build_PL();
